# exercism-c

./: .gitignore  LICENSE
isogram/: CMakeLists.txt
isogram/src/: isogram.c
isogram/test/: test_isogram.c
matching-brackets/: tests.out
matching-brackets/.exercism/: metadata.json
matching-brackets/src/: matching_brackets.c
matching-brackets/test/: test_matching_brackets.c
pangram/: tests.out
pangram/src/: pangram.c  pangram.h
pangram/test/: test_pangram.c
